@@ -44,9 +44,11 @@ import org.joinmastodon.android.utils.StatusFilterPredicate;
 import org.parceler.Parcels;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import me.grishka.appkit.Nav;
@@ -313,10 +315,7 @@ public abstract class StatusDisplayItem{
 			footer=new FooterStatusDisplayItem(parentID, fragment, statusForContent, accountID);
 			footer.hideCounts=hideCounts;
 			items.add(footer);
-			if(status.hasGapAfter!=null && !(fragment instanceof ThreadFragment))
-				items.add(new GapStatusDisplayItem(parentID, fragment, status));
 		}
-		int i=1;
 		boolean inset=(flags & FLAG_INSET)!=0;
 		// add inset dummy so last content item doesn't clip out of inset bounds
 		if((inset || footer==null) && (flags & FLAG_CHECKABLE)==0){
@@ -326,6 +325,10 @@ public abstract class StatusDisplayItem{
 			// !contentItems.isEmpty() && contentItems
 			// 	.get(contentItems.size() - 1) instanceof MediaGridStatusDisplayItem));
 		}
+		GapStatusDisplayItem gap=null;
+		if((flags & FLAG_NO_FOOTER)==0 && status.hasGapAfter!=null && !(fragment instanceof ThreadFragment))
+			items.add(gap=new GapStatusDisplayItem(parentID, fragment, status));
+		int i=1;
 		for(StatusDisplayItem item:items){
 			item.inset=inset;
 			item.index=i++;
@@ -341,8 +344,13 @@ public abstract class StatusDisplayItem{
 		if(!new StatusFilterPredicate(accountID, filterContext, FilterAction.HIDE).test(status))
 			return new ArrayList<StatusDisplayItem>() ;
 
-		return applyingFilter==null ? items :
-				new ArrayList<>(List.of(new WarningFilteredStatusDisplayItem(parentID, fragment, statusForContent, items, applyingFilter)));
+		List<StatusDisplayItem> nonGapItems=gap!=null ? items.subList(0, items.size()-1) : items;
+		WarningFilteredStatusDisplayItem warning=applyingFilter==null ? null :
+				new WarningFilteredStatusDisplayItem(parentID, fragment, statusForContent, nonGapItems, applyingFilter);
+		return applyingFilter==null ? items : new ArrayList<>(gap!=null
+				? List.of(warning, gap)
+				: Collections.singletonList(warning)
+		);
 	}
 
 	public static void buildPollItems(String parentID, BaseStatusListFragment fragment, Poll poll, List<StatusDisplayItem> items, Status status){
@@ -400,12 +408,14 @@ public abstract class StatusDisplayItem{
 		}
 
 		public Optional<StatusDisplayItem> getNextVisibleDisplayItem(){
+			return getNextVisibleDisplayItem(null);
+		}
+		public Optional<StatusDisplayItem> getNextVisibleDisplayItem(Predicate<StatusDisplayItem> predicate){
 			Optional<StatusDisplayItem> next=getNextDisplayItem();
 			for(int offset=1; next.isPresent(); next=getDisplayItemOffset(++offset)){
-				if(!next.map(n->
-						(n instanceof EmojiReactionsStatusDisplayItem e && e.isHidden()) ||
-						(n instanceof DummyStatusDisplayItem)
-				).orElse(false)) return next;
+				boolean isHidden=next.map(n->(n instanceof EmojiReactionsStatusDisplayItem e && e.isHidden())
+						|| (n instanceof DummyStatusDisplayItem)).orElse(false);
+				if(!isHidden && (predicate==null || predicate.test(next.get()))) return next;
 			}
 			return Optional.empty();
 		}
